--- a/maybe-ok-component/addon/templates/components/icon-list.hbs
+++ b/maybe-ok-component/addon/templates/components/icon-list.hbs
@@ -1,5 +1,5 @@
 <ul>
   {{#each (array 1 2 3 4 5) as |numbers|}}
-    <li>{{numbers}}</li>
+    <li>{{fa-icon 'edit'}}{{numbers}}</li>
   {{/each}}
 </ul>
